Closed
Bug 16383
Opened 26 years ago
Closed 26 years ago
[DOGFOOD] assertion loading message
Categories
(SeaMonkey :: MailNews: Message Display, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M11
People
(Reporter: warrensomebody, Assigned: rhp)
Details
(Whiteboard: [PDT+])
Attachments
(1 file)
|
3.30 KB,
text/plain
|
Details |
I hit the following assertion with a particular message in my inbox. After
hitting it, the message pane fails to repaint until another message is
selected:
NTDLL! 77f7629c()
nsDebug::PreCondition(const char * 0x01ea2b90, const char * 0x01ea2b78, const
char * 0x01ea2b48, int 0x00000e3c) line 262 + 13 bytes
XULDocumentImpl::StartLayout() line 3644 + 52 bytes
XULDocumentImpl::EndLoad(XULDocumentImpl * const 0x053fa440) line 1663
XULContentSinkImpl::DidBuildModel(XULContentSinkImpl * const 0x053fb950, int
0x00000001) line 693
CWellFormedDTD::DidBuildModel(CWellFormedDTD * const 0x053c9fc0, unsigned int
0x00000000, int 0x00000001, nsIParser * 0x053fb3d0, nsIContentSink *
0x053fb950) line 287 + 20 bytes
nsParser::DidBuildModel(unsigned int 0x00000000) line 563 + 55 bytes
nsParser::ResumeParse(nsIDTD * 0x00000000, int 0x00000000) line 982
nsParser::OnDataAvailable(nsParser * const 0x053fb3d4, nsIChannel * 0x053f93d0,
nsISupports * 0x053b7284, nsIInputStream * 0x053faa08, unsigned int 0x00000000,
unsigned int 0x00001bf3) line 1372 + 19 bytes
nsDocumentBindInfo::OnDataAvailable(nsDocumentBindInfo * const 0x053ec450,
nsIChannel * 0x053f93d0, nsISupports * 0x053b7284, nsIInputStream * 0x053faa08,
unsigned int 0x00000000, unsigned int 0x00001bf3) line 1201 + 32 bytes
nsMimeBaseEmitter::Complete(nsMimeBaseEmitter * const 0x053f92c0) line 144
nsMimeXULEmitter::Complete(nsMimeXULEmitter * const 0x053f92c0) line 522
nsStreamConverter::OnStopRequest(nsStreamConverter * const 0x053f9430,
nsIChannel * 0x053b71c0, nsISupports * 0x00000000, unsigned int 0x00000000,
const unsigned short * 0x00000000) line 700
nsChannelListener::OnStopRequest(nsChannelListener * const 0x053ee160,
nsIChannel * 0x053b71c0, nsISupports * 0x00000000, unsigned int 0x00000000,
const unsigned short * 0x00000000) line 1364 + 42 bytes
nsOnStopRequestEvent::HandleEvent(nsOnStopRequestEvent * const 0x053cdd00) line
293
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x053cc040) line 164 + 12 bytes
PL_HandleEvent(PLEvent * 0x053cc040) line 541 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x00d02590) line 500 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x046704a6, unsigned int 0x0000c0d2, unsigned
int 0x00000000, long 0x00d02590) line 970 + 9 bytes
USER32! 77e71820()
| Reporter | ||
Comment 1•26 years ago
|
||
Updated•26 years ago
|
Assignee: phil → rhp
Comment 2•26 years ago
|
||
Reassigning to rhp
Updated•26 years ago
|
Summary: assertion loading message → [DOGFOOD] assertion loading message
Comment 3•26 years ago
|
||
Nominate for dogfood
| Assignee | ||
Updated•26 years ago
|
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Target Milestone: M11
| Assignee | ||
Comment 5•26 years ago
|
||
Good catch. One of the names of the people on the "To" list had an & in the
middle and it wasn't being escaped before going to the parser...which would
obviously confuse the parser.
I have this fixed.
- rhp
Par, pls verify using the message that warren has attached to this bug report.
Thanks.
VERIFIED with thanks for jefft and mscott. Used a debug build
from 11/8/99 and the attachment warren provided.
Updated•21 years ago
|
Product: Browser → Seamonkey
| Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•