Fix for email names with embedded &'s - Bug #16383 r=jefft